# Prototype

./: .gitignore  main.py  pyproject.toml
